tests/baselines/reference/asyncFunctionDeclaration8_es2017.errors.txt
tests/cases/conformance/async/es2017/functionDeclarations/asyncFunctionDeclaration8_es2017.ts(1,12): error TS2304: Cannot find name 'await'.
tests/cases/conformance/async/es2017/functionDeclarations/asyncFunctionDeclaration8_es2017.ts(1,20): error TS2304: Cannot find name 'foo'.


==== tests/cases/conformance/async/es2017/functionDeclarations/asyncFunctionDeclaration8_es2017.ts (2 errors) ====
    var v = { [await]: foo }
               ~~~~~
!!! error TS2304: Cannot find name 'await'.
                       ~~~
!!! error TS2304: Cannot find name 'foo'.